Bug 1750146 - Support SWGL x-flipped composites via linear path. r=jrmuizel, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D136159